@startuml

title __GRAPH's Class Diagram__\n

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Axi {
          + Axi()
          ~ draw()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Comment {
          - comment : String
          + Comment()
          + draw()
          + printComment()
          + setComment()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Curve {
          - dots : Dot[]
          + Curve()
          ~ draw()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Dot {
          - x : double
          - y : double
          + Dot()
          + getX()
          + getY()
          ~ draw()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      abstract class com.company.Graph.Graph {
          - color : String
          + getColor()
          + setColor()
          ~ draw()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Grid {
          - scaleX : double
          - scaleY : double
          + Grid()
          + Grid()
          + setScaleX()
          + setScaleY()
          ~ draw()
      }
    }
  }
  

  namespace com.company {
    namespace Graph {
      class com.company.Graph.Window {
          - axis : List<Axi>
          - comments : List<Comment>
          - curves : List<Curve>
          - height : int
          - width : int
          + Window()
          + Window()
          + addAxi()
          + addComment()
          + addCurves()
          + changeScale()
          + drawFunctions()
          + drawPlane()
      }
    }
  }
  

  com.company.Graph.Axi -up-|> com.company.Graph.Graph
  com.company.Graph.Axi o-- com.company.Graph.Dot : A
  com.company.Graph.Axi o-- com.company.Graph.Dot : B
  com.company.Graph.Comment -up-|> com.company.Graph.Graph
  com.company.Graph.Curve -up-|> com.company.Graph.Graph
  com.company.Graph.Dot -up-|> com.company.Graph.Graph
  com.company.Graph.Grid -up-|> com.company.Graph.Graph
  com.company.Graph.Window o-- com.company.Graph.Grid : grid


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
